# zigtut

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
notebook/: 00_start.ipynb  01_intro.ipynb  02_assignment.ipynb  03_arrays.ipynb  04_if_expressions.ipynb  05_while_loops.ipynb
src/01_hello/: hello.zig  test_fail.zig  test_pass.zig
src/02_loopy/: test_loop.zig
